# saml_app_notification

./: .gitignore  Dockerfile  README.md  emailer.py  notify_app_owners.py  pip.conf  pyproject.toml  registry.py  requirements.txt  test.py  utils.sh
kustomize/base/: certs_about_to_expire.job.yaml  certs_expired.job.yaml  job.env  kustomization.yaml
kustomize/base/alerts/: crashloop.alert.yaml  cronfailed.alert.yaml  oomkilled.alert.yaml
kustomize/base/templates/: expired.jinja
kustomize/overlays/dev/: job.env
kustomize/overlays/prod/: job.env
src/saml_registry/: registry.py
templates/: example.jinja  example.txt
test/: test_emailer.py  test_registry.py
